콘테스트 뷰 페이지 수정
콘테스트 뷰 페이지 수정

--- a/src/main/resources/static/css/contest/ContestView.css
+++ b/src/main/resources/static/css/contest/ContestView.css
@@ -65,7 +65,10 @@
             padding: 10px 15px;
             color: #888;
             font-weight: bold;
+        }
 
+        h1, h2, h3 {
+        font-weight: bold;
         }
 
         .meta span.active {
