--- a/src/main/resources/static/css/user/MyPage.css
+++ b/src/main/resources/static/css/user/MyPage.css
@@ -34,7 +34,7 @@ main {
   text-align: center;
   padding: 10px;
   margin: 10px;
-  height: 400px;
+  height: 450px;
   list-style-type: none;
   border: 1px solid whitesmoke;
   border-radius: 6px;
@@ -91,6 +91,46 @@ main {
   color: #333;
 }
 
+.sidebar label {
+  position: relative;
+  display: inline-block;
+}
+
+.sidebar label:hover img {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
+.sidebar label::before {
+  content: '업로드';
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #ffffff;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 10px;
+  display: none;
+  z-index: 10;
+}
+.sidebar input[type="file"] {
+  display: none;
+}
+.sidebar .submit-button {
+  padding: 5px 10px;
+  font-size: 12px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.sidebar label:hover::before {
+  display: block;
+}
 /* main-class */
 .main-class {
   grid-area: main-class;
