--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -110,20 +110,24 @@
         <!-- Pagination Controls -->
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
-                <!--                <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">-->
-                <li class="page-item" th:if="${pageMaker.prev}">
-                    <!--                    <a class="page-link" th:href="@{/notice/list(page=${currentPage - 1})}">&laquo;</a>-->
-                    <a class="page-link" th:href="@{/notice/list(page=${pageMaker.startPage - 1})}">&laquo;</a>
+                <!-- 이전 페이지로 이동 버튼 (prev가 true일 때만 활성화) -->
+                <li class="page-item" th:classappend="${!pageMaker.prev} ? 'disabled'">
+                    <a class="page-link" th:href="@{/notice/list(page=${pageMaker.startPage - 1})}" aria-label="Previous" th:if="${pageMaker.prev}">
+                        &laquo;
+                    </a>
                 </li>
-                <!--                <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}"-->
-                <li class="page-item" th:each="i : ${#numbers.sequence(pageMaker.startPage, pageMaker.endPage)}">
-                    <!--                    th:classappend="${i == '${pageMaker.startPage}' ? 'active'">-->
-                    <a class="page-link" th:text="${i}"   th:href="@{/notice/list(page=${i})}"></a>
+
+                <!-- 페이지 번호 순회 -->
+                <li class="page-item" th:each="i : ${#numbers.sequence(pageMaker.startPage, pageMaker.endPage)}"
+                    th:classappend="${i == pageMaker.currentPage} ? 'active'">
+                    <a class="page-link" th:text="${i}" th:href="@{/notice/list(page=${i})}"></a>
                 </li>
-                <!--                <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">-->
-                <li class="page-item" th:if="${pageMaker.next}">
-                    <!--                    <a class="page-link" th:href="@{/notice/list(page=${currentPage + 1})}">&raquo;</a>-->
-                    <a class="page-link" th:href="@{/notice/list(page=${pageMaker.endPage + 1})}">&raquo;</a>
+
+                <!-- 다음 페이지로 이동 버튼 (next가 true일 때만 활성화) -->
+                <li class="page-item" th:classappend="${!pageMaker.next} ? 'disabled'">
+                    <a class="page-link" th:href="@{/notice/list(page=${pageMaker.endPage + 1})}" aria-label="Next" th:if="${pageMaker.next}">
+                        &raquo;
+                    </a>
                 </li>
             </ul>
         </nav>
