--- a/src/main/resources/templates/contest/ContestView.html
+++ b/src/main/resources/templates/contest/ContestView.html
@@ -80,9 +80,9 @@
         <p>조회수  <span th:text="${contestUploadDTO.conHit}"></span></p>
 
         <!-- 시상하기 버튼 추가 -->
-        <a th:if="${userEmail == writer}" th:href="@{/users/contest/award(contestNum=${contestUploadDTO.id})}" class="button" style="background-color: #28a745; color: white;">
-            시상하기
-        </a>
+            <a th:if="${userEmail == writer}" th:href="@{/users/contest/award(contestNum=${contestUploadDTO.id})}" class="button">
+                시상하기
+            </a>
 
         <a href="/contest/list" class="button">콘테스트 목록으로</a>
 <!--        <a href="/api/users/contest/application/terms" class="button">콘테스트 참여하기</a>-->
