메인페이지 출력값, 지원하기 페이지 남은 기간에 따른 배경 수정
메인페이지 출력값, 지원하기 페이지 남은 기간에 따른 배경 수정

--- a/src/main/resources/static/css/list/applicationTerms.css
+++ b/src/main/resources/static/css/list/applicationTerms.css
@@ -59,7 +59,10 @@ main
     padding: 8px 15px;
     border-radius: 50px;
 }
-
+.endDate.active
+{
+    background: var(--main-color);
+}
 .contitle
 {
     font-size: var(--font-size-20);
