--- a/src/main/resources/static/css/list/contestList.css
+++ b/src/main/resources/static/css/list/contestList.css
@@ -135,6 +135,11 @@ section
     padding: 3px 7px;
 }
 
+.endDate.active
+{
+    background: var(--main-color);
+}
+
 .heart
 {
     margin-left: auto;
