--- a/src/main/resources/templates/notifications/eventWrite.html
+++ b/src/main/resources/templates/notifications/eventWrite.html
@@ -61,17 +61,17 @@
 
             <!-- 이벤트 이미지 -->
             <div class="mb-3">
-                <label for="eventImageUrl">이벤트 이미지</label>
-                <input type="file" id="eventImageUrl" name="file" class="form-control">
+                <label for="eventImageName">이벤트 이미지</label>
+                <input type="file" id="eventImageName" name="file" class="form-control">
 
-                <!-- 기존 이미지가 있을 경우 보여줌 -->
-                <div th:if="${eventDTO.eventImageName != null}" class="mt-2">
-                    <img th:src="${eventDTO.eventImageName}"
+                <div class="mt-2">
+                    <!-- 이미지가 존재하지 않을 경우 기본 이미지로 대체 -->
+                    <img th:src="${eventDTO.eventImageName != null ? eventDTO.eventImageName : '/img/fragments/noimg.png'}"
                          alt="이벤트 이미지" class="img-thumbnail" width="200">
                 </div>
 
                 <!-- 기존 이미지 경로를 숨긴 필드로 전달 -->
-                <input type="hidden" name="existingImageName" th:value="${eventDTO.eventImageName}">
+                <input type="hidden" name="existingImageName" th:value="${eventDTO.eventImageName != null ? eventDTO.eventImageName : ''}">
             </div>
 
             <!-- 버튼들 -->
