:construction: 채팅 아이콘 클릭시 유저 프로필 출력 기능 구현 중

--- a/src/main/resources/static/css/fragments/quickMenu.css
+++ b/src/main/resources/static/css/fragments/quickMenu.css
@@ -133,7 +133,7 @@
 .quickMenu .wrap .chatImg {
     width: 45px;
     height: 45px;
-    background-color: var(--line-gray);
+    /*background-color: var(--line-gray);*/
     border-radius: 50%;
 }
 
