--- a/src/main/resources/static/css/fragments/header.css
+++ b/src/main/resources/static/css/fragments/header.css
@@ -35,6 +35,12 @@ text-decoration: none;
     align-items: center;
 }
 
+a.navbar-brand
+{
+    display: flex;
+    align-items: center;
+}
+
 .search-bar {
     display: flex;
     align-items: center;
@@ -80,6 +86,7 @@ text-decoration: none;
 .nav-link:hover {
     color: rgb(193, 192, 255);
     transform: scale(1.1);
+    text-decoration: none;
 }
 
 .nav-link:active {
