main 페이지, 지원 페이지 이미지가 없을 경우, 값 기본 이미지 출력 수정
main 페이지, 지원 페이지 이미지가 없을 경우, 값 기본 이미지 출력 수정
: 프로젝트 오류 떠서 미확인...

--- a/src/main/resources/static/css/list/applyInfDetail.css
+++ b/src/main/resources/static/css/list/applyInfDetail.css
@@ -41,8 +41,8 @@
         }
         .applyImage img {
             max-width: 100%;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+           /* border: 1px solid #ddd;
+            border-radius: 5px;*/
         }
         .buttonArea {
             display: flex;
