--- a/src/main/resources/templates/contest/ContestView.html
+++ b/src/main/resources/templates/contest/ContestView.html
@@ -85,10 +85,8 @@
             </a>
 
         <div class="button-group">
-            <a href="/contest/list" class="button">목록으로</a>
-            <!-- <a href="/api/users/contest/application/terms" class="button">콘테스트 참여하기</a> -->
-            <!-- <a th:href="@{/api/users/contest/application/terms(contestNum=${contestUploadDTO.id})}" class="button">콘테스트 참여하기</a> -->
-            <a th:if="${userEmail != writer}" th:href="@{/api/users/contest/application/terms(contestNum=${contestUploadDTO.id})}" class="button">참여하기</a>
+            <a href="/contest/list" class="button button-list">목록으로</a>
+            <a th:if="${userEmail != writer}" th:href="@{/api/users/contest/application/terms(contestNum=${contestUploadDTO.id})}" class="button button-participate">참여하기</a>
         </div>
 
     </div>
