--- a/src/main/resources/static/css/notifications/eventList.css
+++ b/src/main/resources/static/css/notifications/eventList.css
@@ -36,6 +36,13 @@ a {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
+/* 버튼 컨테이너 스타일 */
+.button-container {
+    border-radius: 6px; /* 둥근 테두리 */
+    padding: 8px 20px; /* 여백 설정 */
+    bottom: 10px; /* 하단에서 20px 위로 */
+}
+
 /* 수정, 삭제 버튼 색상 변경 및 hover 기능 추가 */
 .btn-primary {
     background-color: #212529; /* 수정 버튼 색상 */
@@ -50,14 +57,14 @@ a {
 }
 
 .btn-danger {
-    background-color: rgb(193, 192, 255); /* 삭제 버튼 색상 */
-    border-color: rgb(193, 192, 255);
-    color: white;
+    background-color: #d3d3d3;; /* 삭제 버튼 색상 */
+    border-color: #d3d3d3;;
+    color: black;
 }
 
 .btn-danger:hover {
-    background-color: rgba(193, 192, 255, 0.8); /* hover 시 색상 */
-    border-color: rgba(193, 192, 255, 0.8);
+    background-color: #b3b3b3; /* hover 시 색상 */
+    border-color: #b3b3b3;
     color: white;
 }
 
