--- a/src/main/resources/static/css/user/login.css
+++ b/src/main/resources/static/css/user/login.css
@@ -37,10 +37,12 @@
     width: 100%;
     padding: 10px;
     margin-top: 35px;
-    background-color: black;
+    /*background-color: black;*/
+    background-color: #212529;
     color: white;
     border: none;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
+    border-radius: 6px;
     cursor: pointer;
     font-size: 16px;
     }
@@ -75,7 +77,8 @@
     }
 
     #loginButton:hover{
-    background-color: #313131;
+    /*background-color: #313131;*/
+     background: #333;
     }
 
     .email, .password{
