--- a/src/main/resources/static/css/user/MyPage.css
+++ b/src/main/resources/static/css/user/MyPage.css
@@ -6,7 +6,8 @@ main {
 
 .container {
   display: grid;
-  width: 1200px;
+  /*width: 1200px;*/
+  width: 1100px;
   margin-top: 10px;
   grid-template-columns: 220px 2fr;
   grid-column-gap: 10px;
@@ -273,10 +274,10 @@ h3 {
     color: black;
     text-align: center;
     padding: 10px 20px;
-    background-color: rgb(193, 192, 255, 0.2); /* 은은한 배경색 */
+    /*background-color: rgb(193, 192, 255, 0.2); /* 은은한 배경색 */
     border-radius: 12px; /* 둥근 테두리 */
     border: 2px solid rgb(193, 192, 255); /* 테두리 색상 */
     display: inline-block; /* 크기 자동 조정 */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 부드러운 그림자 효과 */
+    /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 부드러운 그림자 효과 */
     margin: 20px auto; /* 상하 여백을 주고, 가운데 정렬 */
 }
