--- a/src/main/resources/templates/contest/ContestUpload.html
+++ b/src/main/resources/templates/contest/ContestUpload.html
@@ -11,7 +11,9 @@
 </head>
 <th:block layout:fragment="content">
     <div class="Contestupload">
-        <h1>어떤 작품이 필요하세요?</h1>
+        <div class="title">
+            <h1>어떤 작품이 필요하세요?</h1>
+        </div>
         <form action="/users/contest" method="post" enctype="multipart/form-data">
 
             <h3>회사명(단체명)</h3>
