--- a/src/main/resources/templates/user/MyPage.html
+++ b/src/main/resources/templates/user/MyPage.html
@@ -55,7 +55,7 @@
                     <p th:if="${profile !=null and profile?.profileIntroduce != null}" th:text="${profile?.profileIntroduce}"></p>
                 </div>
 
-                <h3>내가 개최한 컨테스트 목록보기</h3>
+                <h3>내가 개최한 컨테스트 목록</h3>
                 <table>
                     <thead>
                     <tr>
@@ -79,7 +79,7 @@
                     </tbody>
                 </table>
 
-                <h3>내가 지원한 컨테스트 목록보기</h3>
+                <h3>내가 지원한 컨테스트 목록</h3>
                 <table>
                     <thead>
                     <tr>
