--- a/src/main/resources/static/css/contest/ContestUpload.css
+++ b/src/main/resources/static/css/contest/ContestUpload.css
@@ -4,11 +4,16 @@
             width: 1100px;
             margin: auto;
             background: white;
-            /*padding: 20px;*/
-            padding: 30px;
+            padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        .Contestupload  .title
+        {
+            display: flex;
+            align-items: center;
+        }
+
         .Contestupload h1 {
             font-size: 1.75em;
             margin-bottom: 50px;
@@ -20,13 +25,13 @@
         .Contestupload h1::before {
             content: "👉";
             margin-right: 10px;
-            font-size: 1.5em;
+            font-size: 1.2em;
             color: #f5b000;
         }
 
         h3
         {
-            margin: 40px 0 20px 0;
+            margin: 30px 0 20px 0;
             font-size: 1.3em;
         }
 
