--- a/src/main/resources/templates/chat/chatRoom.html
+++ b/src/main/resources/templates/chat/chatRoom.html
@@ -24,7 +24,7 @@
             <img th:src="@{/img/chaatimg.png}" th:if="${receiverPhoto == null}" alt="상대방유저" class="receiver">
           <div class="chat-title" th:text="${receiver}" id="receiver">상대방 유저</div>
           <input id="sender" type="hidden" th:value="${sender}">
-          <button class="exit-button" id="exitButton"> 채팅 종료하기</button>
+          <button class="exit-button" id="exitButton"> 채팅 종료</button>
         </div>
         <div class="chat-body" id="chatBody"></div>
         <div class="chat-footer">
