이벤트 수정삭제 버튼 수정
이벤트 수정삭제 버튼 수정

--- a/src/main/resources/static/css/notifications/eventList.css
+++ b/src/main/resources/static/css/notifications/eventList.css
@@ -38,13 +38,14 @@ a {
 
 /* 버튼 컨테이너 스타일 */
 .button-container {
-    border-radius: 6px; /* 둥근 테두리 */
-    padding: 8px 20px; /* 여백 설정 */
-    bottom: 10px; /* 하단에서 20px 위로 */
+  border-radius: 6px; /* 둥근 테두리 */
+    margin-bottom: 5px;
+    text-align: center; /* 텍스트나 자식 요소들을 가운데 정렬 */
 }
 
 /* 수정, 삭제 버튼 색상 변경 및 hover 기능 추가 */
 .btn-primary {
+    padding: 8px 30px; /* 여백 설정 */
     background-color: #212529; /* 수정 버튼 색상 */
     border-color: #212529;
     color: white;
@@ -57,6 +58,7 @@ a {
 }
 
 .btn-danger {
+    padding: 8px 30px; /* 여백 설정 */
     background-color: #d3d3d3;; /* 삭제 버튼 색상 */
     border-color: #d3d3d3;;
     color: black;
